samples/bad/bad009.lat
// boolean to int assigment
int main() {
        int x;
        x = true;
        return 1;
}
